# derpc

./: Cargo.toml  README.md  config.example.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml
src/: constants.rs  main.rs
