[package]
name = "derpc"
version = "0.1.0"
authors = ["Dominic Harris <tastykake563@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = { git = "https://github.com/nickofolas/discord-rich-presence", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

toml = "0.5"

lazy_static = "1.4.0"
once_cell = "1.8.0"

ctrlc = "3.1.9"
